test/files/neg/ambiguous-same.check
ambiguous-same.scala:13: error: reference to x is ambiguous;
it is both defined in object X and imported subsequently by
import X.x
    x            // not OK, import doesn't shadow definition
    ^
one error found
